--- a/wp-content/themes/mycustomtheme/style.css
+++ b/wp-content/themes/mycustomtheme/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: My Website Theme
-Theme URI: https://up-to-you.ch/
+Theme URI: https://wordpress.org
 Author: Léa Medrano
 Author URI: https://leamedrano.myportfolio.com/
 Description: mycustomthemetheme
